# ml_ops_project

./: .gitignore  .pre-commit-config.yaml  ;  LICENSE  Makefile  README.md  api_cloudbuild.yaml  cloudbuild.yaml  frontend_cloudbuild.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  scratch.py  tasks.py  tst.py
.github/workflows/: codecheck.yaml  pre_commit.yaml  tests.yaml
.streamlit/: config.toml
configs/model/: model_config.yaml
configs/train/: train_config.yaml
data/raw/: validation
data/test_data/: test_data.txt
dockerfiles/: api.dockerfile  frontend.dockerfile  train.dockerfile
docs/: mkdocs.yaml
notebooks/: model_testing.ipynb
reports/: README.md
src/ml_ops_project/: api.py  bucket.py  data.py  evaluation.py  inference.py  load_from_env_file.py  model.py  streamlit.py  train.py  validate_model.py
tests/: __init__.py  test_data.py  test_model.py  test_tokenize.py
